--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "test:coverage": "turbo test:coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "cpd": "jscpd ./apps ./packages",
+    "cpd": "jscpd .",
     "sonar:up": "docker compose -f docker-compose.sonar.yml up -d",
     "sonar:down": "docker compose -f docker-compose.sonar.yml down",
     "sonar": "dotenv -- sonar-scanner -Dsonar.host.url=http://localhost:9000 -Dsonar.token=$SONAR_TOKEN"
