--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@orpc/tanstack-query": "catalog:",
-    "@pagehaven/client": "workspace:*",
     "@pagehaven/auth": "workspace:*",
+    "@pagehaven/client": "workspace:*",
     "@pagehaven/utils": "workspace:*",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
@@ -35,6 +35,7 @@
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
