feat: envs for CI

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+# CI env variables. https://alchemy.run/guides/ci/#_top
 # Alchemy secret, generate with openssl rand -base64 32
 ALCHEMY_PASSWORD=
+ALCHEMY_STATE_TOKEN=
+CLOUDFLARE_API_TOKEN=
+CLOUDFLARE_EMAIL=
 
 # SonarQube (local analysis)
 # Generate at http://localhost:9000 -> Account -> Security -> Generate Token
