--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,20 +23,21 @@
     "destroy": "alchemy destroy --app web"
   },
   "dependencies": {
+    "@orpc/client": "catalog:",
     "@orpc/tanstack-query": "catalog:",
     "@pagehaven/auth": "workspace:*",
     "@pagehaven/client": "workspace:*",
     "@pagehaven/utils": "workspace:*",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/react-form": "^1.27.0",
-    "@tanstack/react-query": "^5.90.11",
-    "@tanstack/react-router": "^1.139.14",
+    "@tanstack/react-form": "^1.27.2",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-router": "^1.140.1",
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.473.0",
+    "lucide-react": "^0.559.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
@@ -50,19 +51,19 @@
   "devDependencies": {
     "@cloudflare/workers-types": "catalog:",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router-devtools": "^1.139.14",
-    "@tanstack/router-plugin": "^1.139.14",
+    "@tanstack/react-router-devtools": "^1.140.1",
+    "@tanstack/router-plugin": "^1.140.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "catalog:",
-    "@types/react": "~19.1.17",
+    "@types/react": "~19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "alchemy": "catalog:",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.3.0",
     "tailwindcss": "^4.1.17",
     "typescript": "catalog:",
-    "vite": "^6.4.1"
+    "vite": "^7.2.7"
   }
 }
