--- a/package.json
+++ b/package.json
@@ -58,15 +58,15 @@
     "sonar": "dotenv -- sonar-scanner -Dsonar.host.url=http://localhost:9000 -Dsonar.token=$SONAR_TOKEN"
   },
   "dependencies": {
-    "dotenv": "catalog:"
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "@cloudflare/workers-types": "catalog:",
+    "@cloudflare/workers-types": "^4.20251210.0",
     "@playwright/test": "^1.57.0",
-    "@types/node": "catalog:",
+    "@types/node": "^22.19.2",
     "@vitest/coverage-v8": "^4.0.15",
-    "alchemy": "catalog:",
+    "alchemy": "^0.79.0",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
@@ -74,7 +74,7 @@
     "sonar-scanner": "^3.1.0",
     "turbo": "^2.6.3",
     "ultracite": "6.3.8",
-    "vitest": "catalog:",
+    "vitest": "^4.0.15",
     "wait-on": "^9.0.3"
   },
   "lint-staged": {
@@ -82,5 +82,5 @@
       "bun x ultracite fix"
     ]
   },
-  "packageManager": "bun@1.3.3"
+  "packageManager": "bun@1.3.4"
 }
