chore: upgrade dependencies
- Update @types/node from ^22.19.1 to ^24.10.3
- Update alchemy from ^0.79.0 to ^0.81.1
- Update drizzle-orm from ^0.44.7 to ^0.45.1
- Update tsdown from ^0.16.8 to ^0.17.2
- Update better-auth from ^1.4.5 to ^1.4.6
- Update hono from ^4.10.7 to ^4.10.8
- Update wrangler from ^4.52.1 to ^4.53.0
- Update @cloudflare/workers-types from ^4.20251205.0 to ^4.20251210.0
- Update @tanstack/react-router from ^1.140.1 to ^1.140.5
- Update workspace catalog with new versions
- Set root package.json dependencies to use catalog references

--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
       "packages/*"
     ],
     "catalog": {
-      "@cloudflare/workers-types": "^4.20251205.0",
+      "@cloudflare/workers-types": "^4.20251210.0",
       "@orpc/client": "^1.12.2",
       "@orpc/openapi": "^1.12.2",
       "@orpc/server": "^1.12.2",
       "@orpc/tanstack-query": "^1.12.2",
       "@orpc/zod": "^1.12.2",
-      "@types/node": "^22.19.1",
-      "alchemy": "^0.79.0",
-      "better-auth": "^1.4.5",
+      "@types/node": "^24.10.3",
+      "alchemy": "^0.81.1",
+      "better-auth": "^1.4.6",
       "dotenv": "^17.2.3",
-      "drizzle-orm": "^0.44.7",
-      "hono": "^4.10.7",
-      "tsdown": "^0.16.8",
+      "drizzle-orm": "^0.45.1",
+      "hono": "^4.10.8",
+      "tsdown": "^0.17.2",
       "typescript": "^5.9.3",
       "vitest": "^4.0.15",
-      "wrangler": "^4.52.1",
+      "wrangler": "^4.53.0",
       "zod": "^4.1.13"
     }
   },
@@ -62,11 +62,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "@cloudflare/workers-types": "^4.20251210.0",
+    "@cloudflare/workers-types": "catalog:",
     "@playwright/test": "^1.57.0",
-    "@types/node": "^22.19.2",
+    "@types/node": "catalog:",
     "@vitest/coverage-v8": "^4.0.15",
-    "alchemy": "^0.79.0",
+    "alchemy": "catalog:",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
@@ -74,7 +74,7 @@
     "sonar-scanner": "^3.1.0",
     "turbo": "^2.6.3",
     "ultracite": "6.3.8",
-    "vitest": "^4.0.15",
+    "vitest": "catalog:",
     "wait-on": "^9.0.3"
   },
   "lint-staged": {
