refactor: rollback better-auth and restructure authentication system
- Remove better-auth dependencies and configuration across all apps
- Roll back to custom auth implementation in web app sessions manager
- Update environment configurations to remove better-auth specific vars
- Simplify auth client configuration and remove better-auth client setup
- Add infrastructure helpers for deployment and resource management
- Update database migration naming and metadata
- Clean up package dependencies and lock file
- Standardize environment variable definitions across packages
- Remove better-auth from alchemy run configurations
- Remove unused dotenv dependency from root package.json

This change reverts the better-auth integration in favor of a simpler,
more maintainable custom authentication approach that better fits the
project's requirements and deployment constraints.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
-# CI env variables. https://alchemy.run/guides/ci/#_top
 # Alchemy secret, generate with openssl rand -base64 32
 ALCHEMY_PASSWORD=
+
+# CI env variables. https://alchemy.run/guides/ci/#_top
 ALCHEMY_STATE_TOKEN=
 CLOUDFLARE_API_TOKEN=
 CLOUDFLARE_EMAIL=
 
-# SonarQube (local analysis)
-# Generate at http://localhost:9000 -> Account -> Security -> Generate Token
+# Service domain config
+STAGE=
+SERVER_DOMAIN=
+STATIC_DOMAIN=
+WEB_DOMAIN=
+
+# Local SonarQube: Generate at http://localhost:9000 -> Account -> Security -> Generate Token
 SONAR_TOKEN=
