--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,6 @@
     }
   },
   "scripts": {
-    "dev": "vite --port=3001",
     "build": "vite build",
     "serve": "vite preview",
     "start": "vite",
@@ -18,7 +17,7 @@
     "test": "vitest run --config vitest.config.ts",
     "test:coverage": "vitest run --coverage --config vitest.config.ts",
     "test:watch": "vitest --config vitest.config.ts",
-    "dev:alchemy": "alchemy dev --app web",
+    "dev": "alchemy dev --app web",
     "deploy": "alchemy deploy --app web",
     "destroy": "alchemy destroy --app web"
   },
@@ -42,7 +41,6 @@
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "server": "workspace:*",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
