--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "@types/node": "^24.10.3",
       "@vitest/coverage-v8": "^4.0.15",
       "alchemy": "^0.81.1",
-      "better-auth": "^1.4.5",
+      "better-auth": "1.4.5",
       "dotenv": "^17.2.3",
       "drizzle-orm": "^0.45.1",
       "hono": "^4.10.8",
