refactor: improve environment-aware URL building
- Replace addProtocolFromStage with dedicated buildUrl and getDomainByEnvironment functions
- Update .gitignore and .codeiumignore to better handle environment files
- Standardize URL construction across server and static apps
- Add proper environment subdomain handling for non-dev/prod stages

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@ build
 *.tsbuildinfo
 
 # Environment variables
-.env
-.env*.local
+.env*
+.env.production
+!.env.example
 
 # IDEs and editors
 .vscode/*
