feat(deploy): added deploy.yml from https://alchemy.run/guides/ci/#_top
fix(infra): require entrypoint

refactor(web): compute VITE_* env vars from helpers in vite.config.ts

- Import buildUrl, getDomainByEnvironment, getUsername from @pagehaven/infra/helpers
- Load root .env via dotenv and compute VITE_SERVER_URL and VITE_STATIC_DOMAIN
- Use Vite define config to inject computed values at build time
- Add @pagehaven/infra as dependency
- Update .env.example to note only root .env is used

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@orpc/client": "catalog:",
     "@orpc/tanstack-query": "catalog:",
     "@pagehaven/auth": "workspace:*",
+    "@pagehaven/infra": "workspace:*",
     "@pagehaven/client": "workspace:*",
     "@pagehaven/utils": "workspace:*",
     "@radix-ui/react-tabs": "^1.1.13",
