--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Alchemy secret, generate with openssl rand -base64 32
 ALCHEMY_PASSWORD=
+# Better Auth secret (used by server and static)
+BETTER_AUTH_SECRET=
 
 # CI env variables. https://alchemy.run/guides/ci/#_top
 ALCHEMY_STATE_TOKEN=
