feat: improve Alchemy infrastructure and GitHub OAuth configuration
- Add createApp helper function for consistent Alchemy app creation
- Make createSharedResources stage-aware for proper resource naming
- Update all apps to use new infrastructure helpers
- Rename GitHub OAuth credentials from GITHUB_CLIENT_* to APP_GITHUB_CLIENT_*
- Add preview URL comments for PR deployments

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,4 +1,4 @@
 # GitHub OAuth (for repository integration)
 # Create a GitHub App at https://github.com/settings/apps
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+APP_GITHUB_CLIENT_ID=
+APP_GITHUB_CLIENT_SECRET=
