--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Deploy
-        run: bun alchemy deploy --stage ${{ env.STAGE }}
+        run: bun deploy --stage ${{ env.STAGE }}
         env:
           ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
           ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
@@ -60,7 +60,7 @@ jobs:
             exit 1
           fi
       - name: Destroy Preview Environment
-        run: bun alchemy destroy --stage ${{ env.STAGE }}
+        run: bun destroy --stage ${{ env.STAGE }}
         env:
           ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
           ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
