--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,23 +13,7 @@ concurrency:
   group: deploy-${{ github.ref }}
   cancel-in-progress: false
 env:
-  # Alchemy
-  STAGE: ${{ github.event_name == 'pull_request' && format('pr-{0}',
-    github.event.number) || (github.ref == 'refs/heads/main' && 'prod' ||
-    github.ref_name) }}
-  ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
-  ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
-  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
-  # Domains
-  SERVER_DOMAIN: ${{ secrets.SERVER_DOMAIN }}
-  STATIC_DOMAIN: ${{ secrets.STATIC_DOMAIN }}
-  WEB_DOMAIN: ${{ secrets.WEB_DOMAIN }}
-  # Server and Static
-  BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
-  # GitHub App credentials
-  APP_GITHUB_CLIENT_ID: ${{ secrets.APP_GITHUB_CLIENT_ID }}
-  APP_GITHUB_CLIENT_SECRET: ${{ secrets.APP_GITHUB_CLIENT_SECRET }}
+  STAGE: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || (github.ref == 'refs/heads/main' && 'prod' || github.ref_name) }}
 jobs:
   deploy:
     if: ${{ github.event.action != 'closed' }}
@@ -53,6 +37,20 @@ jobs:
           GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
           GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Alchemy
+          ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
+          ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+          # Domains
+          SERVER_DOMAIN: ${{ secrets.SERVER_DOMAIN }}
+          STATIC_DOMAIN: ${{ secrets.STATIC_DOMAIN }}
+          WEB_DOMAIN: ${{ secrets.WEB_DOMAIN }}
+          # Server and Static
+          BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
+          # GitHub App credentials
+          APP_GITHUB_CLIENT_ID: ${{ secrets.APP_GITHUB_CLIENT_ID }}
+          APP_GITHUB_CLIENT_SECRET: ${{ secrets.APP_GITHUB_CLIENT_SECRET }}
   cleanup:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed'
@@ -78,3 +76,17 @@ jobs:
         run: bun run destroy
         env:
           PULL_REQUEST: ${{ github.event.number }}
+          # Alchemy
+          ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
+          ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+          # Domains
+          SERVER_DOMAIN: ${{ secrets.SERVER_DOMAIN }}
+          STATIC_DOMAIN: ${{ secrets.STATIC_DOMAIN }}
+          WEB_DOMAIN: ${{ secrets.WEB_DOMAIN }}
+          # Server and Static
+          BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
+          # GitHub App credentials
+          APP_GITHUB_CLIENT_ID: ${{ secrets.APP_GITHUB_CLIENT_ID }}
+          APP_GITHUB_CLIENT_SECRET: ${{ secrets.APP_GITHUB_CLIENT_SECRET }}
