refactor: use globalPassThroughEnv wildcard for all env vars
Replace verbose per-task env arrays with globalPassThroughEnv: ['*']
which passes all environment variables to all tasks automatically.

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "ui": "tui",
+  "globalPassThroughEnv": ["*"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
@@ -37,79 +38,18 @@
     },
     "deploy": {
       "dependsOn": ["^deploy"],
-      "cache": false,
-      "env": [
-        "STAGE",
-        "ALCHEMY_PASSWORD",
-        "ALCHEMY_STATE_TOKEN",
-        "CLOUDFLARE_API_TOKEN",
-        "CLOUDFLARE_EMAIL",
-        "SERVER_DOMAIN",
-        "STATIC_DOMAIN",
-        "WEB_DOMAIN",
-        "BETTER_AUTH_SECRET",
-        "APP_GITHUB_CLIENT_ID",
-        "APP_GITHUB_CLIENT_SECRET",
-        "PULL_REQUEST",
-        "GITHUB_SHA",
-        "GITHUB_REPOSITORY",
-        "GITHUB_REPOSITORY_OWNER",
-        "GITHUB_REPOSITORY_NAME",
-        "GITHUB_TOKEN"
-      ]
+      "cache": false
     },
     "server#destroy": {
       "dependsOn": ["web#destroy"],
-      "cache": false,
-      "env": [
-        "STAGE",
-        "ALCHEMY_PASSWORD",
-        "ALCHEMY_STATE_TOKEN",
-        "CLOUDFLARE_API_TOKEN",
-        "CLOUDFLARE_EMAIL",
-        "SERVER_DOMAIN",
-        "STATIC_DOMAIN",
-        "WEB_DOMAIN",
-        "BETTER_AUTH_SECRET",
-        "APP_GITHUB_CLIENT_ID",
-        "APP_GITHUB_CLIENT_SECRET",
-        "PULL_REQUEST"
-      ]
+      "cache": false
     },
     "static#destroy": {
       "dependsOn": ["web#destroy", "server#destroy"],
-      "cache": false,
-      "env": [
-        "STAGE",
-        "ALCHEMY_PASSWORD",
-        "ALCHEMY_STATE_TOKEN",
-        "CLOUDFLARE_API_TOKEN",
-        "CLOUDFLARE_EMAIL",
-        "SERVER_DOMAIN",
-        "STATIC_DOMAIN",
-        "WEB_DOMAIN",
-        "BETTER_AUTH_SECRET",
-        "APP_GITHUB_CLIENT_ID",
-        "APP_GITHUB_CLIENT_SECRET",
-        "PULL_REQUEST"
-      ]
+      "cache": false
     },
     "web#destroy": {
-      "cache": false,
-      "env": [
-        "STAGE",
-        "ALCHEMY_PASSWORD",
-        "ALCHEMY_STATE_TOKEN",
-        "CLOUDFLARE_API_TOKEN",
-        "CLOUDFLARE_EMAIL",
-        "SERVER_DOMAIN",
-        "STATIC_DOMAIN",
-        "WEB_DOMAIN",
-        "BETTER_AUTH_SECRET",
-        "APP_GITHUB_CLIENT_ID",
-        "APP_GITHUB_CLIENT_SECRET",
-        "PULL_REQUEST"
-      ]
+      "cache": false
     },
     "db:generate": {
       "cache": false,
