--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,10 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Deploy
-        run: bun run deploy
+        run: |
+          bun run deploy:server
+          bun run deploy:static
+          bun run deploy:web
         env:
           PULL_REQUEST: ${{ github.event.number }}
           GITHUB_SHA: ${{ github.sha }}
