tweak: ui=stream did not do anything on -F

--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "dev:server": "turbo -F server dev",
     "dev:static": "turbo -F static dev",
     "deploy": "turbo deploy --ui=stream",
-    "deploy:web": "turbo -F web deploy --ui=stream",
-    "deploy:server": "turbo -F server deploy --ui=stream",
-    "deploy:static": "turbo -F static deploy --ui=stream",
+    "deploy:web": "turbo -F web deploy",
+    "deploy:server": "turbo -F server deploy",
+    "deploy:static": "turbo -F static deploy",
     "destroy": "turbo destroy --ui=stream",
-    "destroy:web": "turbo -F web destroy --ui=stream",
-    "destroy:server": "turbo -F server destroy --ui=stream",
-    "destroy:static": "turbo -F static destroy --ui=stream",
+    "destroy:web": "turbo -F web destroy",
+    "destroy:server": "turbo -F server destroy",
+    "destroy:static": "turbo -F static destroy",
     "db:generate": "turbo -F @pagehaven/db db:generate",
     "db:push": "turbo -F @pagehaven/db db:push",
     "db:studio": "turbo -F @pagehaven/db db:studio",
