refactor: standardize resource naming and improve worker creation API
- Add REPO_NAME prefix to all Cloudflare resources (database, storage, cache)
- Simplify createWorker API with options object pattern
- Add proper TypeScript types for worker creation options
- Use REPO_NAME as worker identifier instead of hardcoded 'worker'
- Add --bun flag to Vite build commands for performance
- Enhance package exports with proper type definitions
- Standardize logging output using app.appName

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,14 @@
 {
   "name": "@pagehaven/config",
   "version": "0.0.0",
-  "private": true
+  "private": true,
+  "type": "module",
+  "exports": {
+    "./constants": {
+      "default": "./src/constants.ts"
+    },
+    "./tsconfig.base.json": {
+      "default": "./tsconfig.base.json"
+    }
+  }
 }
