refactor: centralize env loading with Vite-style precedence and env-cli wrapper
- Add @pagehaven/config/env with loadEnv() supporting .env < .env.local < .env.{mode} < .env.{mode}.local
- Add env-cli bin for loading env and expanding env var refs in commands
- Add @pagehaven/infra/constants with getInfraName() and validateInfraEnv()
- Refactor all alchemy.run.ts files to use loadEnv() instead of dotenv
- Update package scripts to use env-cli for dynamic app names
- Add gh-env-sync.ts script for syncing env to GitHub secrets
- Standardize .gitignore patterns: .env*local, !.env*.example
- Remove hardcoded secrets from deploy.yml workflow
- Add comprehensive tests for env loading

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,8 @@ build
 *.tsbuildinfo
 
 # Environment variables
-.env*
-.env.production
-!.env.example
+.env*local
+!.env*.example
 
 # IDEs and editors
 .vscode/*
