--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
       "@orpc/server": "^1.12.2",
       "@orpc/tanstack-query": "^1.12.2",
       "@orpc/zod": "^1.12.2",
+      "@types/bun": "^1.3.4",
       "@types/node": "^24.10.3",
       "@vitest/coverage-v8": "^4.0.15",
       "alchemy": "^0.81.1",
       "better-auth": "1.4.5",
       "dotenv": "^17.2.3",
+      "dotenv-expand": "^12.0.3",
       "drizzle-orm": "^0.45.1",
       "hono": "^4.10.8",
       "tsdown": "^0.17.2",
@@ -49,7 +51,7 @@
     "db:generate": "turbo -F @pagehaven/db db:generate",
     "db:push": "turbo -F @pagehaven/db db:push",
     "db:studio": "turbo -F @pagehaven/db db:studio",
-    "gh:env:sync": "./scripts/gh-env-sync.sh",
+    "gh:env:sync": "bun run scripts/gh-env-sync.ts",
     "test": "turbo test",
     "test:coverage": "turbo test:coverage",
     "test:e2e": "playwright test",
@@ -57,18 +59,19 @@
     "cpd": "jscpd .",
     "sonar:up": "docker compose -f docker-compose.sonar.yml up -d",
     "sonar:down": "docker compose -f docker-compose.sonar.yml down",
-    "sonar": "dotenv -- sonar-scanner -Dsonar.host.url=http://localhost:9000 -Dsonar.token=$SONAR_TOKEN"
+    "sonar": "dotenv -- sonar-scanner -Dsonar.host.url=http://localhost:9000 -Dsonar.token=${SONAR_TOKEN}"
   },
-  "dependencies": {
-    "dotenv": "catalog:"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@cloudflare/workers-types": "catalog:",
     "@playwright/test": "^1.57.0",
+    "@types/bun": "catalog:",
     "@types/node": "catalog:",
     "@vitest/coverage-v8": "catalog:",
     "alchemy": "catalog:",
+    "commander": "^14.0.2",
+    "dotenv": "catalog:",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
