test: add unit tests for config and infra packages
- Add vitest and coverage scripts to @pagehaven/config, @pagehaven/infra, @pagehaven/utils
- Add path.test.ts for findWorkspaceRoot function
- Add helpers.test.ts for getUsername, isDevelopmentEnvironment, buildUrl, getDomainEnvVar, getEnvVar, getSecretEnvVar
- Add constants.test.ts for buildInfraName, getInfraName, validateInfraEnv
- Extend env.test.ts with tests for getEnv, getProcessEnvVar, getEnvFilePatterns
- Add @vitest/coverage-v8 to knip ignore list

Coverage results:
- @pagehaven/config: 96.29% statements, 100% branches
- @pagehaven/infra: 95.34% statements, 100% branches

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -17,9 +17,16 @@
       "default": "./tsconfig.base.json"
     }
   },
+  "scripts": {
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest"
+  },
   "devDependencies": {
     "@types/bun": "catalog:",
+    "@vitest/coverage-v8": "catalog:",
     "dotenv": "catalog:",
-    "dotenv-expand": "catalog:"
+    "dotenv-expand": "catalog:",
+    "vitest": "catalog:"
   }
 }
