--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -15,11 +15,16 @@
     }
   },
   "scripts": {
-    "check-types": "tsc -b"
+    "check-types": "tsc -b",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest"
   },
   "devDependencies": {
     "@pagehaven/config": "workspace:*",
-    "alchemy": "catalog:"
+    "@vitest/coverage-v8": "catalog:",
+    "alchemy": "catalog:",
+    "vitest": "catalog:"
   },
   "peerDependencies": {
     "typescript": "^5"
