chore: add vitest to all packages, remove per-package coverage deps
- Add vitest to apps/cli, apps/web, packages/api, packages/client, packages/db
- Remove @vitest/coverage-v8 from individual packages (coverage handled at root)
- Remove @vitest/coverage-v8 from knip ignore list

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "@pagehaven/config": "workspace:*",
-    "@types/node": "catalog:"
+    "@types/node": "catalog:",
+    "vitest": "catalog:"
   },
   "peerDependencies": {
     "typescript": "^5"
