--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -18,10 +18,10 @@
     "@pagehaven/client": "workspace:*",
     "@pagehaven/utils": "workspace:*",
     "chalk": "^5.6.2",
-    "commander": "^14.0.2",
+    "commander": "catalog:",
     "glob": "^13.0.0",
     "ora": "^9.0.0",
-    "yaml": "^2.8.2"
+    "yaml": "catalog:"
   },
   "devDependencies": {
     "@pagehaven/config": "workspace:*",
