--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
       "typescript": "^5.9.3",
       "vitest": "^4.0.15",
       "wrangler": "^4.54.0",
+      "commander": "^14.0.2",
+      "yaml": "^2.8.2",
       "zod": "^4.1.13"
     }
   },
@@ -70,7 +72,7 @@
     "@types/node": "catalog:",
     "@vitest/coverage-v8": "catalog:",
     "alchemy": "catalog:",
-    "commander": "^14.0.2",
+    "commander": "catalog:",
     "dotenv": "catalog:",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
@@ -80,7 +82,8 @@
     "turbo": "^2.6.3",
     "ultracite": "6.3.8",
     "vitest": "catalog:",
-    "wait-on": "^9.0.3"
+    "wait-on": "^9.0.3",
+    "yaml": "catalog:"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
