refactor(scripts): move gh-env-sync to @pagehaven/scripts package
- Create packages/scripts with proper monorepo structure
- Update import to use @pagehaven/config/env workspace dependency
- Add turbo task configuration for gh-env-sync
- Update root script to run via turbo for proper monorepo execution
- Remove commander, yaml, and dotenv from root devDeps (now in scripts package)

--- a/turbo.json
+++ b/turbo.json
@@ -96,6 +96,10 @@
       "inputs": ["apps/**", "packages/**", "sonar-project.properties"],
       "outputs": [],
       "cache": false
+    },
+    "@pagehaven/scripts#gh-env-sync": {
+      "cache": false,
+      "persistent": false
     }
   }
 }
