--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "db:generate": "turbo -F @pagehaven/db db:generate",
     "db:push": "turbo -F @pagehaven/db db:push",
     "db:studio": "turbo -F @pagehaven/db db:studio",
-    "gh:env:sync": "bun run scripts/gh-env-sync.ts",
+    "gh:env:sync": "turbo --ui=stream -F @pagehaven/scripts gh-env-sync --",
     "test": "turbo test",
     "test:coverage": "turbo test:coverage",
     "test:e2e": "playwright test",
@@ -72,8 +72,6 @@
     "@types/node": "catalog:",
     "@vitest/coverage-v8": "catalog:",
     "alchemy": "catalog:",
-    "commander": "catalog:",
-    "dotenv": "catalog:",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
@@ -82,8 +80,7 @@
     "turbo": "^2.6.3",
     "ultracite": "6.3.8",
     "vitest": "catalog:",
-    "wait-on": "^9.0.3",
-    "yaml": "catalog:"
+    "wait-on": "^9.0.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
