--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -25,7 +25,7 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "catalog:"
   },
   "dependencies": {
     "drizzle-orm": "catalog:"
