refactor: move e2e tests to @pagehaven/test package and organize deps into bun catalogs
- Move e2e/ and playwright.config.ts to packages/test
- Create @pagehaven/test package with turbo task configuration
- Update root scripts to run e2e via turbo

Organize dependencies into bun catalogs:
- Default catalog: core deps (alchemy, hono, zod, drizzle, etc.)
- testing catalog: vitest, playwright, testing-library, jsdom
- react catalog: react, radix-ui, lucide-react, sonner, etc.
- tanstack catalog: react-query, react-router, react-form
- build catalog: vite, tailwindcss

Update all packages to use catalog: references for consistency

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -17,16 +17,16 @@
   "dependencies": {
     "@pagehaven/client": "workspace:*",
     "@pagehaven/utils": "workspace:*",
-    "chalk": "^5.6.2",
+    "chalk": "catalog:",
     "commander": "catalog:",
-    "glob": "^13.0.0",
-    "ora": "^9.0.0",
+    "glob": "catalog:",
+    "ora": "catalog:",
     "yaml": "catalog:"
   },
   "devDependencies": {
     "@pagehaven/config": "workspace:*",
     "@types/node": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:testing"
   },
   "peerDependencies": {
     "typescript": "catalog:"
