--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,42 +29,42 @@
     "@pagehaven/config": "workspace:*",
     "@pagehaven/client": "workspace:*",
     "@pagehaven/utils": "workspace:*",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/react-form": "^1.27.2",
-    "@tanstack/react-query": "^5.90.12",
-    "@tanstack/react-router": "^1.141.0",
+    "@radix-ui/react-tabs": "catalog:react",
+    "@tailwindcss/vite": "catalog:build",
+    "@tanstack/react-form": "catalog:tanstack",
+    "@tanstack/react-query": "catalog:tanstack",
+    "@tanstack/react-router": "catalog:tanstack",
     "better-auth": "catalog:",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "class-variance-authority": "catalog:react",
+    "clsx": "catalog:react",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.560.0",
-    "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
+    "lucide-react": "catalog:react",
+    "next-themes": "catalog:react",
+    "radix-ui": "catalog:react",
+    "react": "catalog:react",
+    "react-dom": "catalog:react",
+    "sonner": "catalog:react",
+    "tailwind-merge": "catalog:react",
     "tw-animate-css": "^1.4.0",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "catalog:",
-    "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router-devtools": "^1.141.0",
-    "@tanstack/router-plugin": "^1.141.0",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
+    "@tanstack/react-query-devtools": "catalog:tanstack",
+    "@tanstack/react-router-devtools": "catalog:tanstack",
+    "@tanstack/router-plugin": "catalog:tanstack",
+    "@testing-library/jest-dom": "catalog:testing",
+    "@testing-library/react": "catalog:testing",
+    "@testing-library/user-event": "catalog:testing",
     "@types/node": "catalog:",
-    "@types/react": "~19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@types/react": "catalog:react",
+    "@types/react-dom": "catalog:react",
+    "@vitejs/plugin-react": "catalog:react",
     "alchemy": "catalog:",
-    "jsdom": "^27.3.0",
-    "tailwindcss": "^4.1.17",
+    "jsdom": "catalog:testing",
+    "tailwindcss": "catalog:build",
     "typescript": "catalog:",
-    "vitest": "catalog:",
-    "vite": "^7.2.7"
+    "vitest": "catalog:testing",
+    "vite": "catalog:build"
   }
 }
