--- a/package.json
+++ b/package.json
@@ -16,20 +16,61 @@
       "@orpc/zod": "^1.12.2",
       "@types/bun": "^1.3.4",
       "@types/node": "^24.10.3",
-      "@vitest/coverage-v8": "^4.0.15",
       "alchemy": "^0.81.1",
       "better-auth": "1.4.5",
+      "chalk": "^5.6.2",
+      "commander": "^14.0.2",
       "dotenv": "^17.2.3",
       "dotenv-expand": "^12.0.3",
+      "drizzle-kit": "^0.31.8",
       "drizzle-orm": "^0.45.1",
+      "glob": "^13.0.0",
       "hono": "^4.10.8",
+      "ora": "^9.0.0",
       "tsdown": "^0.17.2",
       "typescript": "^5.9.3",
-      "vitest": "^4.0.15",
       "wrangler": "^4.54.0",
-      "commander": "^14.0.2",
       "yaml": "^2.8.2",
       "zod": "^4.1.13"
+    },
+    "catalogs": {
+      "testing": {
+        "@playwright/test": "^1.57.0",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@vitest/coverage-v8": "^4.0.15",
+        "jsdom": "^27.3.0",
+        "vitest": "^4.0.15"
+      },
+      "react": {
+        "@types/react": "~19.2.7",
+        "@types/react-dom": "^19.2.3",
+        "@radix-ui/react-tabs": "^1.1.13",
+        "@vitejs/plugin-react": "^5.1.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.560.0",
+        "next-themes": "^0.4.6",
+        "radix-ui": "^1.4.3",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.4.0"
+      },
+      "tanstack": {
+        "@tanstack/react-form": "^1.27.2",
+        "@tanstack/react-query": "^5.90.12",
+        "@tanstack/react-query-devtools": "^5.91.1",
+        "@tanstack/react-router": "^1.141.0",
+        "@tanstack/react-router-devtools": "^1.141.0",
+        "@tanstack/router-plugin": "^1.141.0"
+      },
+      "build": {
+        "@tailwindcss/vite": "^4.1.17",
+        "tailwindcss": "^4.1.17",
+        "vite": "^7.2.7"
+      }
     }
   },
   "scripts": {
@@ -56,8 +97,8 @@
     "gh:env:sync": "turbo --ui=stream -F @pagehaven/scripts gh-env-sync --",
     "test": "turbo test",
     "test:coverage": "turbo test:coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
+    "test:e2e": "turbo -F @pagehaven/test test:e2e",
+    "test:e2e:ui": "turbo -F @pagehaven/test test:e2e:ui",
     "cpd": "jscpd .",
     "sonar:up": "docker compose -f docker-compose.sonar.yml up -d",
     "sonar:down": "docker compose -f docker-compose.sonar.yml down",
@@ -67,10 +108,9 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@cloudflare/workers-types": "catalog:",
-    "@playwright/test": "^1.57.0",
     "@types/bun": "catalog:",
     "@types/node": "catalog:",
-    "@vitest/coverage-v8": "catalog:",
+    "@vitest/coverage-v8": "catalog:testing",
     "alchemy": "catalog:",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
@@ -79,7 +119,7 @@
     "sonar-scanner": "^3.1.0",
     "turbo": "^2.6.3",
     "ultracite": "6.3.8",
-    "vitest": "catalog:",
+    "vitest": "catalog:testing",
     "wait-on": "^9.0.3"
   },
   "lint-staged": {
