feat: Add Cloudflare DNS record management for subdomains
- Create cloudflare-dns.ts utility with CRUD operations for DNS records
- Add DNS record creation on site.create (CNAME pointing to static domain)
- Add DNS record deletion on site.delete
- Update static worker to pass CLOUDFLARE_API_TOKEN and ZONE_ID bindings
- Skip DNS operations in development mode
- Add proper error handling and rollback on DNS creation failure
- Add env var STATIC_CLOUDFLARE_API_TOKEN

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,11 @@ env:
   WEB_DOMAIN: ${{ secrets.WEB_DOMAIN }}
   # Server and Static
   BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
-  # GitHub App credentials
+  # Server GitHub App credentials
   APP_GITHUB_CLIENT_ID: ${{ secrets.APP_GITHUB_CLIENT_ID }}
   APP_GITHUB_CLIENT_SECRET: ${{ secrets.APP_GITHUB_CLIENT_SECRET }}
+  # Static Cloudflare
+  STATIC_CLOUDFLARE_API_TOKEN: ${{ secrets.STATIC_CLOUDFLARE_API_TOKEN }}
 jobs:
   deploy:
     if: ${{ github.event.action != 'closed' }}
